# alive-memory

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BOUNDARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY-NOW.sh  DEPLOY_VPS.md  DO-THIS.md  Dockerfile  LICENSE  PLAN-056.md  PLAN-059.md  README.md  TASKS-ARCHIVE.md  TASKS.md  alive_config.py  alive_config.yaml  body-spec-v2.md  bootstrap_assets.py  bugs-and-fixes.md  clock.py  complete-deployment.sh  compositing.py  db.py  deploy-shopkeeper.sh  docker-compose.yml  feb10-readings.txt  feed_ingester.py  generate_token.py  get-secrets.sh  happy_convo_feb13.txt  heartbeat.py  heartbeat_server.py  ingest.py  llm_logger.py  pyproject.toml  pytest.ini  (+13 more)
.claude/: settings.json
alive_cognition/: __init__.py  affect.py  channels.py  drives.py  habituation.py  overrides.py  thalamus.py  types.py
alive_memory/: __init__.py  clock.py  config.py  sleep.py  types.py
api/: __init__.py  api_auth.py  dashboard_routes.py  organism.py  public_routes.py
benchmarks/: README.md  __init__.py  __main__.py  concurrent_runner.py  cross_domain.py  generate_streams.py  report.py  requirements.txt  runner.py
body/: __init__.py  channels.py  executor.py  internal.py  mcp_client.py  mcp_executor.py  mcp_registry.py  rate_limiter.py  telegram.py  web.py  x_client.py  x_social.py
config/: agent_identity.py  default_digital_lifeform.yaml  default_identity.yaml  feeds.py  identity.py  location.py  prompts.yaml
content/: simulation-visitors.json
data/: .fuse_hidden0000001600000001  .fuse_hidden0000001a00000005
db/: __init__.py  actions.py  analytics.py  connection.py  content.py  events.py  mcp.py  memory.py  meta_experiments.py  parameters.py  social.py  state.py
demo/: README.md  scene-config.json
deploy/: DEPLOY_LOUNGE.md  Dockerfile.agent  backup.sh  deploy-lounge.sh  deploy.sh  docker-backup.sh  init-certs.sh  nginx-alive-lounge.conf  nginx-http-only.conf  nginx-lounge.conf  nginx.Dockerfile  nginx.conf  renew-certs.sh  setup.sh  shopkeeper.service  update-env.sh
docs/: ALIVE_EVOLUTION_TASKS.md  ALIVE_STRUCTURAL_EVOLUTION.md  ARCHITECTURE.md  BENCHMARK_METRICS_PLAN.md  BENCHMARK_SPEC.md  BUGS_AND_FIXES.md  CONFIG.md  DASHBOARD.md  DIAGNOSTIC-068.md  INTEGRATIONS.md  TASK-051-architecture-rewrite.md  TASK-052-shop-window.md  alive-cognition-plan.md  architecture.md  autoconfig-implementation-plan.md  benchmark-findings-2026-03-23.md  character-bible.md  code-factory-brief.md  dashboard-spec.md  eval-suite-spec.md  gotchas.md  living-loop-spec-v2.md  longmemeval-improvement-plan.md  (+16 more)
sim/: db.py  (+7 more)
(+1484 files in other folders)
