[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alive-memory"
version = "1.0.0a1"
description = "Cognitive memory infrastructure for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Pham Minh Tri" },
]
keywords = ["ai", "agents", "memory", "cognitive", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
openrouter = ["httpx>=0.27.0"]
gemini = ["google-genai>=1.0.0"]
embeddings = ["openai>=1.0.0"]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]
langchain = ["langchain-core>=0.3.0"]
dashboard = ["streamlit>=1.30.0", "requests>=2.31.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "langchain-core>=0.3.0",
    "streamlit>=1.30.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.0",
    "httpx>=0.27.0",
]

[project.scripts]
alive-memory-server = "alive_memory.server.app:main"

[project.urls]
Homepage = "https://github.com/TriMinhPham/alive-memory"
Repository = "https://github.com/TriMinhPham/alive-memory"
Issues = "https://github.com/TriMinhPham/alive-memory/issues"

# --- Tool configs ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that take a while (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["alive_memory", "tools"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["alive_memory"]

[tool.coverage.run]
source = ["alive_memory"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
